--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
 	А першели на новый уровень. Keep it fucking difficult for the money. Поэтому я пишу эти строчки. Да, я это все выучил.
 	И пока я безработный, готов поделится своими знаниями об этом. Начиная от осонов Unix, TCP/IPб и заканчивая кладами, докерами.
 	Кубернейтсами и всем прочим. </p>
-	<p> Почитать можно вот здесь <a href=http://serenity-net-org/read/>Читать</a> Комменты можно оставлять только после регистрации.
+	<p> Почитать можно вот здесь <a href=http://serenity-net.org/read/>Читать</a> Комменты можно оставлять только после регистрации.
 	<p>Если не лень, регистрируйтесь и читайте мои статьи инвайт z o m b y  без пробелов <br>
 	Спасибо! и не стесняйтесь на обратную связь Моя почта int собака shushik.net</p>
     </div>
