--- a/static/index.html
+++ b/static/index.html
@@ -12,12 +12,9 @@
     <center style="font-size: 24px;"><a href="/reg/">Регистрация</a> <a href="/enter/">Вход</a></center>
     <div>
         <h1>Здравствуйте!</h1>
-	<p> Этот сайт был создан от бездельлья и беспомощности. Я 15 лет занимаю IT и упс, если у тебя
-	нету коммерческого опыта с продуктами вроде AWS или gcloud - тебя на помойку. Был коммерческий опыт,
-	я у них в долг влез. У меня такое впечатление что совренные технологии отказались от принципа KISS (keep it simple stuped)
-	А першели на новый уровень. Keep it fucking difficult for the money. Поэтому я пишу эти строчки. Да, я это все выучил.
-	И пока я безработный, готов поделится своими знаниями об этом. Начиная от осонов Unix, TCP/IPб и заканчивая кладами, докерами.
-	Кубернейтсами и всем прочим. </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dHK8huaNBjo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<p> Я верю в себя и свои мозги. Да, правила игры помеялись, но почитайте мои заметки. Я окучу все стадо.
+	Нфичная от основ Unix, Linux, FreeBSD, продолжая клаудами. Не стесняйтесь, пишите запросы. :))))))
 	<p> Почитать можно вот здесь <a href=http://serenity-net.org/read/>Читать</a> Комменты можно оставлять только после регистрации.
 	<p>Если не лень, регистрируйтесь и читайте мои статьи инвайт z o m b y  без пробелов <br>
 	Спасибо! и не стесняйтесь на обратную связь Моя почта int собака shushik.net</p>
