--- a/d/tmpl/header.html
+++ b/d/tmpl/header.html
@@ -15,9 +15,9 @@
         <title>serenity-net.org</title>
         <meta name="viewport" content="width=830, initial-scale=1">
         <link href="/static/style.css" rel="stylesheet" type="text/css">
+	<meta class="CryptoPluginExtensionLoaded" content="1.0.2">
     </head>
     <body>
-<center> <img src="/static/serenity.jpg"></center>
 <div>
     <center style="font-size: 30px">Бесконечность не предел!</center>
 {{ end }}
