--- a/d/static/index.html
+++ b/d/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="head">
-    <img src="/static/serenity.jpg" class="logo">
+<cenetr> <img src="/static/serenity.jpg" class="logo"></center>
     <center style="font-size: 30px"> Бескончность не предел! </center>
 
     <center style="font-size: 24px;"><a href="/reg/">Регистрация</a> <a href="/enter/">Вход</a></center>
