--- a/d/static/index.html
+++ b/d/static/index.html
@@ -6,17 +6,20 @@
 </head>
 <body>
 <div id="head">
-<cenetr> <img src="/static/serenity.jpg" class="logo"></center>
+<center> <img src="/static/serenity.jpg" class="logo"></center>
     <center style="font-size: 30px"> Бескончность не предел! </center>
 
     <center style="font-size: 24px;"><a href="/reg/">Регистрация</a> <a href="/enter/">Вход</a></center>
     <div>
         <h1>Здравствуйте!</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dHK8huaNBjo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<p> Я верю в себя и свои мозги. Да, правила игры помеялись, но почитайте мои заметки. Я окучу все стадо.
-	Нфичная от основ Unix, Linux, FreeBSD, продолжая клаудами. Не стесняйтесь, пишите запросы. :))))))
+	<p> Правила игры здорово поменялсь чс тех пор как ступал на стезю сисадминства. Админы
+	или как щас приято говорит девопсы не моугт ничего грамотно настроить а потом на работе спать, их штормят по всем направлениям.
+	Я как бы в определенный момент с этим свкся, потому что я сам для себя по ночам из шкуры лез, для абсоллютно бесполезных мне вещей,
+	тратил деньги на железяки итд итп. А теперь я хочу поделится этим всем.
+	Наичная от основ Unix, Linux, FreeBSD, продолжая клаудами и некоторыми языками.. Не стесняйтесь, пишите запросы. :))))))
 	<p> Почитать можно вот здесь <a href=http://serenity-net.org/read/>Читать</a> Комменты можно оставлять только после регистрации.
-	<p>Если не лень, регистрируйтесь и читайте мои статьи инвайт z o m b y  без пробелов <br>
+	<p>Если не лень, регистрируйтесь и комменте  мои статьи инвайт z o m b y  без пробелов <br>
 	Спасибо! и не стесняйтесь на обратную связь Моя почта int собака shushik.net</p>
     </div>
 </div>
