--- a/tmpl/posts.html
+++ b/tmpl/posts.html
@@ -1,4 +1,6 @@
+<div>
 запостчено {{ .Pfname }} {{ .Psname }},
     {{ .Posttime }}<br>
         <a href="/comform/{{.Id}}">Оставить коммент</a>
 <hr>
+</div>
