--- a/d/tmpl/posts.html
+++ b/d/tmpl/posts.html
@@ -1,4 +1,5 @@
 запостчено {{ .Pfname }} {{ .Psname }},
     {{ .Posttime }}<br>
+	<a href="/postview/{{.Id}}">Читать дальше<br>
         <a href="/comform/{{.Id}}">Оставить коммент</a>
 <hr>
