--- a/tmpl/posts.html
+++ b/tmpl/posts.html
@@ -1,6 +1,7 @@
 <div>
 запостчено {{ .Pfname }} {{ .Psname }},
     {{ .Posttime }}<br>
+	<a href="/postview/{ .Id }"> }Смотреть дальше </a>
         <a href="/comform/{{.Id}}">Оставить коммент</a>
 <hr>
 </div>
